--- a/App.xaml
+++ b/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Avto_deli.Login"
+﻿<Application x:Class="Avto_deli.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Avto_deli"
