--- a/Login.xaml
+++ b/Login.xaml
@@ -19,6 +19,7 @@
         <RadioButton x:Name="GeneričnaZbirka_Radiobuton" Content="Generična zbrika" HorizontalAlignment="Left" Margin="163,250,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="VerižniSeznam_Radiobuton" Content="Verižni seznam" HorizontalAlignment="Left" Margin="20,270,0,0" VerticalAlignment="Top"/>
         <RadioButton x:Name="Database_Radiobuton" Content="Database" HorizontalAlignment="Left" Margin="20,250,0,0" VerticalAlignment="Top" IsChecked="True"/>
+        <Label x:Name="Login_Lable" Content="" HorizontalAlignment="Left" Margin="145,267,0,0" VerticalAlignment="Top" Width="130"/>
 
     </Grid>
 </Window>
