--- a/Main_Verizni_Seznam_Stran.xaml
+++ b/Main_Verizni_Seznam_Stran.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Avto_deli"
         mc:Ignorable="d"
-        Title="Main_Verizni_Seznam_Stran" Height="450" Width="800">
+        Title="Avto_Deli_Main" Height="768" Width="1366" Background="#3c404d">
     <Grid>
-        
+        <Label x:Name="Lable_Vozel" Content="Label" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="480" Width="1348" FontSize="16"/>
+        <Button x:Name="Button_cena10" Content="Cena10" HorizontalAlignment="Left" Margin="40,525,0,0" VerticalAlignment="Top" Width="165" Height="60" FontSize="16" Click="Button_cena10_Click"/>
+        <Button x:Name="Button_Shrani" Content="Shrani" HorizontalAlignment="Left" Margin="40,620,0,0" VerticalAlignment="Top" Width="165" Height="60" Click="Button_Shrani_Click" FontSize="16"/>
+        <Button Content="Izpisi_Stevilo" HorizontalAlignment="Left" Margin="270,525,0,0" VerticalAlignment="Top" Width="165" Height="60" FontSize="16" Click="Button_Click"/>
     </Grid>
 </Window>
