--- a/Main_Genericna_zbirka_Stran.xaml
+++ b/Main_Genericna_zbirka_Stran.xaml
@@ -10,6 +10,8 @@
         <ListBox x:Name="ListBox_Gen" HorizontalAlignment="Left" Height="500" VerticalAlignment="Top" Width="1358"/>
         <Button x:Name="Sort_Button" Content="Sort po ceni" HorizontalAlignment="Left" Margin="1155,525,0,0" VerticalAlignment="Top" Width="170" Height="60" FontSize="16" Click="Sort_Button_n"/>
         <Button x:Name="Shrani_Button" Content="Shrani" HorizontalAlignment="Left" Margin="1155,635,0,0" VerticalAlignment="Top" Width="170" Height="60" FontSize="16" Click="Shrani_Button_n"/>
+        <Button x:Name="Izbris_ID" Content="Delete označen" HorizontalAlignment="Left" Margin="930,525,0,0" VerticalAlignment="Top" Width="170" Height="60" FontSize="16" Click="Izbris_ID_Click"/>
+        <Button x:Name="Random_button" Content="Randomizer" HorizontalAlignment="Left" Margin="930,635,0,0" VerticalAlignment="Top" Width="170" Height="60" FontSize="16" Click="Random_button_Click"/>
 
     </Grid>
 </Window>
